Notifications and Admin improvements: - Notifications now have more custom text depending on the action - Admin layout is now Jade templates - Implemented custom sidebar branding

--- a/blender-today/application/templates/admin/contents/create.html
+++ b/blender-today/application/templates/admin/contents/create.html
@@ -1,6 +1,3 @@
 {% extends 'admin/model/create.html' %}
-
 {% block tail %}
-    {{ super() }}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.0.1/ckeditor.js"></script>
-{% endblock %}
+{{ super() }}<script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.0.1/ckeditor.js"></script>{% endblock %}
