--- a/blender-today/src/jade/admin/layout_admin.jade
+++ b/blender-today/src/jade/admin/layout_admin.jade
@@ -2,7 +2,7 @@
 
 | {% block brand %}
 span.brand
-	a(href="{{url_for('index')}}")
+	a(href="{{url_for('index')}}").
 		{{ admin_view.admin.name }}
 | {% endblock %}
 
