--- a/blender-today/src/sass/main.sass
+++ b/blender-today/src/sass/main.sass
@@ -2500,7 +2500,7 @@ fieldset
 
 .nav-sidebar.branding,
 .user-login-branding,
-.user-register-branding
+.user-register-branding,
 	text-align: center
 
 	& .nav-sidebar-mug,
@@ -2615,6 +2615,16 @@ fieldset
 		& a
 			display: inline-block
 			padding: 0 5px 5px 5px
+
+.nav-sidebar.newcomer
+	text-align: center
+	font-size: 0.9em
+	color: lighten($color_text, 20%)
+	padding: 10px 20px 10px 20px
+
+	& p
+		padding: 0
+		margin: 0
 
 .whoosh
 	display: block !important
