--- a/blender-today/src/jade/_sidebar.jade
+++ b/blender-today/src/jade/_sidebar.jade
@@ -81,8 +81,15 @@
 		.flyout-hat
 		.flyout-content
 			span.flyout-title Notifications
+
 			span#notifications-refresh(title="Refresh notifications feed")
 				i#notifications-refresh-icon.fa.fa-refresh
+
+			a#notifications-markallread(
+				title="Mark All as Read",
+				href="/notifications/read-all")
+				| Mark All as Read
+
 			| {% include '_notifications.html' %}
 
 	// Newly registered member
