--- a/blender-today/src/jade/layout.jade
+++ b/blender-today/src/jade/layout.jade
@@ -132,6 +132,7 @@ html(lang="en", prefix="og: http://ogp.me/ns#")
 		script(src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js", type="text/javascript")
 		script(src="//cdn.embed.ly/jquery.embedly-3.1.1.min.js", type="text/javascript")
 		script(src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js", type="text/javascript")
+		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/0.6.3/js/min/perfect-scrollbar.jquery.min.js", type="text/javascript")
 		script(src="{{url_for('static', filename='js/theuniverse.min.js')}}", type="text/javascript")
 
 		script.
