--- a/blender-today/src/sass/main.sass
+++ b/blender-today/src/sass/main.sass
@@ -122,24 +122,13 @@ blockquote
 		font-size: 1.1em
 		float: left
 
-	& .flyout-hat
-		width: 0
-		height: 0
-		position: absolute
-		border-style: solid
-		border-width: 0 8px 8px 8px
-		border-color: transparent transparent white transparent
-
 	&.notifications
 		position: absolute
 		right: 90px
 		top: 60px
 		z-index: 9999
 		width: 420px
-
-		& .flyout-hat
-			top: -8px
-			right: 41px
+		border-top-color: white
 
 @import js_perfectscrollbar
 
@@ -166,6 +155,21 @@ blockquote
 
 	&:hover, &.active
 		color: lighten($color_brand_main, 25%)
+
+	& .flyout-hat
+		width: 0
+		height: 0
+		position: absolute
+		border-style: solid
+		border-width: 0 8px 8px 8px
+		border-color: transparent transparent white transparent
+		bottom: -4px
+		right: 10px
+		visibility: hidden
+
+	&.active
+		& .flyout-hat
+			visibility: visible
 
 	#notifications-count
 		opacity: 0
@@ -201,8 +205,8 @@ blockquote
 
 	& .nc-item, & .nc-loading
 		position: relative
-		padding: 12px 0
-		border-top: thin solid lighten($color_text, 60%)
+		padding: 10px 0
+		border-top: thin solid lighten($color_text, 62%)
 		margin: 0
 		width: 100%
 		display: block
