--- a/blender-today/src/sass/main.sass
+++ b/blender-today/src/sass/main.sass
@@ -1426,6 +1426,11 @@ blockquote
 	+media-xs
 		padding: 20px 5px 20px 15px
 
+	&:hover
+		& .edit-comment-toggle,
+		& .edit-comment-delete
+			visibility: visible
+
 	& ul
 		list-style-type: none
 		padding-left: 30px
@@ -1458,12 +1463,30 @@ blockquote
 		background-color: darken(white, 5%)
 	&.flash
 		+text-shadow-none
-		animation: effect-flash-fadeout 2s ease forwards
+		animation: effect-flash-fadeout 1s ease forwards
 		& .post-view-comments-item-content,
 		& .post-view-comments-item-details
 			margin-left: 15px
 			+media-xs
 				margin-left: -5px
+
+	& .edit-comment-toggle
+		visibility: hidden
+		+media-xs
+			visibility: visible
+
+	& .edit-comment-save
+		display: none
+		color: darken(saturate($color_success, 10%), 20%)
+
+	& .edit-comment-delete
+		visibility: hidden
+		padding-left: 15px
+		+media-xs
+			visibility: visible
+
+	& .post-view-comments-item-action
+		float: right
 
 
 div#post-comment-reply-container
@@ -1670,12 +1693,11 @@ div#post-comment-reply-container
 	position: fixed
 	top: -25px
 	left: 40%
-	width: 20%
 	text-align: center
 	z-index: 9999
 	background-color: darken(saturate($color_info, 10%), 10%)
 	color: white
-	padding-top: 2px
+	padding: 2px 10px
 	border-bottom-left-radius: 3px
 	border-bottom-right-radius: 3px
 	font-family: $font_headings
