Add edited info to comments, and tweak pretty date to account for 1 month/year

--- a/blender-today/src/jade/posts/_macros.jade
+++ b/blender-today/src/jade/posts/_macros.jade
@@ -61,6 +61,9 @@ div(class="post-view-comments-item {% if is_reply %}reply{% endif %} {{ loop.cyc
 		| {# Date #}
 		span(title="{{comment.creation_date.strftime('%H:%M on %d %B, %Y')}}").
 			{{comment.pretty_creation_date}}
+			{% if comment.edit_date %}
+				<small>(edited {{comment.pretty_edit_date}})</small>
+			{% endif %}
 
 
 	| {# Comment Text #}
